Fixed the display of the itinerary for desktop to handle overflow. Adjusted div sizes and button padding to improve display of the itinerary items on desktop.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,10 +143,9 @@ h4 {
   position: relative;
   width: 100%;
   height: 470px;
-  overflow: auto;
+  overflow-y: scroll;
   left: 0;
   cursor: pointer;
-  overflow-x: hidden;
   background-color: #009cbf;
 }
 
@@ -199,7 +198,7 @@ div.gm-style-iw.gm-style-iw-c {
   font-weight: 300;
   font-size: 1rem;
   background-color: #fff;
-  padding: 10px;
+  padding: 5px 10px 5px 10px;
   border-radius: 3px;
 }
 
@@ -355,14 +354,16 @@ div#iw-rating {
 /*-------------------------------------Itinerary*/
 
 #actualItinerary {
-  min-height: 200px;
+  height: 450px;
   min-width: 100%;
   list-style: none;
+  overflow-y: scroll;
 }
 
 .inner-div {
   display: inline-block;
   padding-right: 20px;
+  vertical-align: top;
 }
 
 .table-header {
@@ -377,6 +378,7 @@ div#iw-rating {
 .itinerary-list-item {
   list-style: none;
   color: #fff;
+  margin-bottom: 5px;
 }
 
 #footer {
